@@ -1,3 +1,7 @@
+2002-12-19  Andras Varga
+
+	* always use <iostream> instead of <iostream.h>
+
 2002-12-17  Andras Varga
 
 	* cobject.h: check_and_cast<T>(cObject *p) template function added --
@@ -5,6 +9,7 @@
 	types are incompatible. Useful with message subclassing.
 
 2002-12-02  Andras Varga
+
 	* cmessage.h: added convenience methods: addObject(), getObject(), 
 	hasObject(), removeObject(). Refined related documentation and 
 	added hint to message subclassing to class description.
